HttpSupport.java: get charset name explicitly